# real_stat_ai_project

./: Dockerfile  README.md  pyproject.toml
backend/data/: final_dataset.csv
backend/models/: best_model.joblib
backend/src/: main.py  ml_pipeline.py  prompts.py  schemas.py
backend/src/testing/: a.py  testp.py
frontend/: ui.py
